@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version:
 ----------------
 
+- Test database connections before using them (#2932)
+
 - Support non-numeric join criteria (#2006)
 
 - Ensure there's enough room in the SQL to hold a long (#1284)
